--- a/index.html
+++ b/index.html
@@ -50,6 +50,6 @@
       </div>
     </div>
 
-    <div id="footer"><a href="https://github.com/brun0ne/ktopytal.info" target="_blank">github</a></div>
+    <div id="footer"><a href="https://github.com/Borys9975/ktoNIEpytal.info" target="_blank">github</a></div>
   </body>
 </html>
