--- a/ja/index.html
+++ b/ja/index.html
@@ -41,7 +41,7 @@
     <div id="after-kto" style="display: none;">
       <div class="text-center wrapper">
         <div style="width: 100%;">
-          <span class="m-title item">Wynik: <b id="wynik">Ja pytałem 😊</b></span>
+          <span class="m-title item">Wynik: <b id="wynik">Ja nie pytałem 😊</b></span>
 
           <br /><br />
 
@@ -50,6 +50,6 @@
       </div>
     </div>
 
-    <div id="footer"><a href="https://github.com/brun0ne/ktopytal.info" target="_blank">github</a></div>
+    <div id="footer"><a href="https://github.com/Borys9975/ktoNIEpytal.info" target="_blank">github</a></div>
   </body>
 </html>
