--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <div id="after-kto" style="display: none;">
       <div class="text-center wrapper">
         <div style="width: 100%;">
-          <span class="m-title item">Wynik: <b>Nikt nie pytał.</b></span>
+          <span class="m-title item">Wynik: <b>każdy pytał.</b></span>
 
           <br /><br />
 
