--- a/ja/index.html
+++ b/ja/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Kto pytał?</title>
+    <title>Kto nie pytał?</title>
 
     <meta charset="utf-8" />
     <link rel="icon" type="image/x-icon" href="qm_sm.png">
@@ -17,7 +17,7 @@
     <div id="pre-kto">
       <div class="text-center wrapper">
         <div style="width: 100%;">
-          <span class="m-title item">Sprawdzanie: <b>Kto pytał?</b></span>
+          <span class="m-title item">Sprawdzanie: <b>Kto nie pytał?</b></span>
 
           <br /><br />
 
